snippets/Nemerle.Statechart/Tests/testsuite/positive/several_action_with_same_name.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;
using System.Threading;

  /// <summary>
  /// Description of junction_example.
  /// </summary>
  [statechart(
  <#
  flags testing;
  name "event list";
  //flags debug;

  state A
  {
    entry / act;
  }
  
  #>)]
public class example
{
 act() : void
 {
   Console.WriteLine("0")
 }
 
 public act(_ : int) : void
 {
 }
}

module Test
{
  Main() : void
  {
    def fsm = example();
    def tester = fsm.GetTester();
    tester.ConsoleTestInit();
    tester.Initiate("A", "EntryA");
    fsm.Terminate();
  }
}

/*
BEGIN-OUTPUT
0
EntryA
[A]
Ok
END-OUTPUT
*/
