snippets/Nemerle.Statechart/Tests/testsuite/negative/duplicate_target_state.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;
  /// <summary>
  /// Description of junction_example.
  /// </summary>
  [statechart(
  <#
  flags testing;

  //flags debug;

  name "duplicate target state";
  
  state A
  {
    a => B; // E: Ambiguous target "B" of transition "TransitionAToBBya". There is more than one states of this name
  }
  
  state B
  {
  }
   
  state B
  {
  }
  #>)]
  public class example
  {
  }



